Initial commit. Adds token persistence.

--- a/authorizationServer/src/main/resources/application.yml
+++ b/authorizationServer/src/main/resources/application.yml
@@ -6,7 +6,7 @@ logging:
     root: INFO
     com.demosso.authorizationserver: DEBUG
     org.springframework.jdbc: DEBUG
-    org.springframework.security: trace
+    org.springframework.security: DEBUG
 
 spring:
   security:
