--- a/authorizationServer/src/main/resources/application.yml
+++ b/authorizationServer/src/main/resources/application.yml
@@ -23,8 +23,20 @@ spring:
             token-uri: https://oauth2.googleapis.com/token
             user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
 
+  mail:
+    host: smtp.gmail.com
+    username: <username>
+    password: <password>
+    port: 587
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
   datasource:
-    url: jdbc:postgresql://localhost:5442/demosso
+    url: jdbc:postgresql://localhost:5442/demosso-mfa
     username: demosso
     password: password
     driver-class-name: org.postgresql.Driver
@@ -40,7 +52,7 @@ spring:
       auto: none
 
   flyway:
-    url: jdbc:postgresql://localhost:5442/demosso
+    url: jdbc:postgresql://localhost:5442/demosso-mfa
     user: demosso
     password: password
 
