--- a/authorizationServer/build.gradle
+++ b/authorizationServer/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.flywaydb:flyway-core'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '3.2.2'
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
