--- a/authorizationServer/build.gradle
+++ b/authorizationServer/build.gradle
@@ -22,6 +22,9 @@ dependencies {
     implementation 'org.springframework.security:spring-security-cas'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation group: 'jakarta.mail', name: 'jakarta.mail-api', version: '2.1.2'
     implementation 'org.flywaydb:flyway-core'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
