--- a/authorizationServer/src/main/resources/application.yml
+++ b/authorizationServer/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
             user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
 
   datasource:
-    url: jdbc:postgresql://localhost:5442/demosso
+    url: jdbc:postgresql://localhost:5442/demosso-state
     username: demosso
     password: password
     driver-class-name: org.postgresql.Driver
@@ -40,7 +40,7 @@ spring:
       auto: none
 
   flyway:
-    url: jdbc:postgresql://localhost:5442/demosso
+    url: jdbc:postgresql://localhost:5442/demosso-state
     user: demosso
     password: password
 
